add videos interface back and front

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,9 +4,11 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
 <style>body{margin:0;padding:0;overflow:hidden}</style><link rel="stylesheet" href="styles.b29f58a009974f51.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.b29f58a009974f51.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="runtime.b1b6ba4d9e6fc1c2.js" type="module"></script><script src="polyfills.9cf1a615626f6a01.js" type="module"></script><script src="main.a5ae926179db3244.js" type="module"></script>
+  <script src="https://www.youtube.com/iframe_api"></script>
+<script src="runtime.b1b6ba4d9e6fc1c2.js" type="module"></script><script src="polyfills.82d5f591ef8e91e5.js" type="module"></script><script src="main.cb00bfe23e9b7511.js" type="module"></script>
 
 </body></html>
