insert contact form

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,11 +4,12 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+  <script type="text/javascript">(function() { emailjs.init("5iKCH7J4E4oyGDbkE");})();</script>
 <style>body{margin:0;padding:0;overflow:hidden}</style><link rel="stylesheet" href="styles.b29f58a009974f51.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.b29f58a009974f51.css"></noscript></head>
 <body>
   <app-root></app-root>
   <script src="https://www.youtube.com/iframe_api"></script>
-<script src="runtime.b1b6ba4d9e6fc1c2.js" type="module"></script><script src="polyfills.82d5f591ef8e91e5.js" type="module"></script><script src="main.cb00bfe23e9b7511.js" type="module"></script>
+<script src="runtime.b1b6ba4d9e6fc1c2.js" type="module"></script><script src="polyfills.82d5f591ef8e91e5.js" type="module"></script><script src="main.060bb292554e06a5.js" type="module"></script>
 
 </body></html>
